k8s/istio/gateway-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nfl-schedules-gateway-default
  namespace: nfl-schedules
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.adlt.dev"
